<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.FactureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelFacture"
                    android:layout_width="23dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/label_total"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="@string/label_total" />

                <TextView
                    android:id="@+id/factureTxtMontant"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="0€"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text='@string/montant' />
            </LinearLayout>

            <Button
                android:id="@+id/factureBtModifier"
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:backgroundTint="#75B4F6"
                android:text="@string/bt_modifier"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/bt_modifier" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:layout_weight="1"
                    android:text="@string/label_mail"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:text="@string/label_mail" />

                <EditText
                    android:id="@+id/factureEditMail"
                    android:layout_width="184dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_nom"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:text="@string/label_nom" />

                <EditText
                    android:id="@+id/factureEditNom"
                    android:layout_width="190dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_prenom"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:text="@string/label_prenom" />

                <EditText
                    android:id="@+id/factureEditPrenom"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="229dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_adresse"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="@string/label_adresse" />

                <EditText
                    android:id="@+id/factureEditAdresse"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/factureBtValider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#75A87A"
                android:text="@string/bt_valider"
                android:textSize="16sp"
                tools:text="@string/bt_valider" />

            <Button
                android:id="@+id/factureBtAnnuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#F1A2A2"
                android:text="@string/bt_annuler"
                android:textSize="16sp"
                tools:text="@string/bt_annuler" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>